@@ -1,11 +1,5 @@
 package uk.gov.hmcts.reform.civil.handler.tasks;
 
-import java.lang.reflect.Method;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.camunda.bpm.client.exception.ValueMapperException;
@@ -13,21 +7,27 @@ import org.camunda.bpm.client.task.ExternalTask;
 import org.springframework.stereotype.Component;
 import org.springframework.util.ReflectionUtils;
 import org.springframework.util.StringUtils;
-
 import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
 import uk.gov.hmcts.reform.civil.exceptions.InvalidCaseDataException;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.common.Element;
-import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.model.genapplication.GADetailsRespondentSol;
 import uk.gov.hmcts.reform.civil.model.genapplication.GeneralApplicationsDetails;
 import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
 import uk.gov.hmcts.reform.civil.service.data.ExternalTaskInput;
 import uk.gov.hmcts.reform.civil.utils.CaseDataContentConverter;
 
+import java.lang.reflect.Method;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+
 import static com.google.common.collect.Lists.newArrayList;
 import static java.lang.Long.parseLong;
+import static java.util.Objects.isNull;
 import static java.util.Optional.ofNullable;
 
 @RequiredArgsConstructor
@@ -39,6 +39,7 @@ public class UpdateFromGACaseEventTaskHandler implements BaseExternalTaskHandler
     private static final String civilDocClaimantSuffix = "DocClaimant";
     private static final String civilDocRespondentSolSuffix = "DocRespondentSol";
     private static final String civilDocRespondentSolTwoSuffix = "DocRespondentSolTwo";
+    private static final String gaDraft = "gaDraft";
     private final CoreCaseDataService coreCaseDataService;
     private final CaseDetailsConverter caseDetailsConverter;
     private final ObjectMapper mapper;
@@ -92,39 +93,86 @@ public class UpdateFromGACaseEventTaskHandler implements BaseExternalTaskHandler
             updateDocCollectionField(output, civilCaseData, generalAppCaseData, "dismissalOrder");
             updateDocCollectionField(output, civilCaseData, generalAppCaseData, "directionOrder");
             updateDocCollectionField(output, civilCaseData, generalAppCaseData, "hearingNotice");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, "generalAppEvidence");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, "hearingOrder");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, "requestForInformation");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, "writtenRepSequential");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, "writtenRepConcurrent");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, "consentOrder");
+            updateDocCollectionField(output, civilCaseData, generalAppCaseData, gaDraft);
+
         } catch (Exception e) {
             log.error(e.getMessage());
         }
         return output;
     }
 
-    private int checkIfDocumentExists(List<Element<CaseDocument>> civilCaseDocumentList,
-                                      List<Element<CaseDocument>> gaCaseDocumentlist) {
-        return civilCaseDocumentList.stream().filter(civilDocument -> gaCaseDocumentlist
-              .parallelStream().anyMatch(gaDocument -> gaDocument.getId().equals(civilDocument.getId())))
-            .collect(Collectors.toList()).size();
+    @SuppressWarnings("unchecked")
+    protected int checkIfDocumentExists(List<Element<?>> civilCaseDocumentList,
+                                      List<Element<?>> gaCaseDocumentlist) {
+        if (gaCaseDocumentlist.get(0).getValue().getClass().equals(CaseDocument.class)) {
+            List<Element<CaseDocument>> civilCaseList = civilCaseDocumentList.stream()
+                .map(element -> (Element<CaseDocument>) element)
+                .toList();
+            List<Element<CaseDocument>> gaCaseList = gaCaseDocumentlist.stream()
+                .map(element -> (Element<CaseDocument>) element)
+                .toList();
+
+            return civilCaseList.stream().filter(civilDocument -> gaCaseList
+                .parallelStream().anyMatch(gaDocument -> gaDocument.getValue().getDocumentLink()
+                    .equals(civilDocument.getValue().getDocumentLink()))).toList().size();
+        } else {
+            List<Element<Document>> civilCaseList = civilCaseDocumentList.stream()
+                .map(element -> (Element<Document>) element)
+                .toList();
+
+            List<Element<Document>> gaCaseList = gaCaseDocumentlist.stream()
+                .map(element -> (Element<Document>) element)
+                .toList();
+
+            return civilCaseList.stream().filter(civilDocument -> gaCaseList
+                .parallelStream().anyMatch(gaDocument -> gaDocument.getValue().getDocumentUrl()
+                    .equals(civilDocument.getValue().getDocumentUrl()))).toList().size();
+        }
     }
 
     protected void updateDocCollectionField(Map<String, Object> output, CaseData civilCaseData, CaseData generalAppCaseData, String docFieldName) throws Exception {
+        String civilDocPrefix = docFieldName;
+        if (civilDocPrefix.equals("generalAppEvidence")) {
+            civilDocPrefix = "gaEvidence";
+        }
+
+        if (civilDocPrefix.equals("requestForInformation")) {
+            civilDocPrefix = "requestForInfo";
+        }
+
+        if (civilDocPrefix.equals("writtenRepSequential")) {
+            civilDocPrefix = "writtenRepSeq";
+        }
+
+        if (civilDocPrefix.equals("writtenRepConcurrent")) {
+            civilDocPrefix = "writtenRepCon";
+        }
+
         //staff collection will hold ga doc accessible for judge and staff
         String fromGaList = docFieldName + gaDocSuffix;
-        String toCivilStaffList = docFieldName + civilDocStaffSuffix;
+        String toCivilStaffList = civilDocPrefix + civilDocStaffSuffix;
         updateDocCollection(output, generalAppCaseData, fromGaList,
                 civilCaseData, toCivilStaffList);
         //Claimant collection will hold ga doc accessible for Claimant
-        String toCivilClaimantList = docFieldName + civilDocClaimantSuffix;
+        String toCivilClaimantList = civilDocPrefix + civilDocClaimantSuffix;
         if (canViewClaimant(civilCaseData, generalAppCaseData)) {
             updateDocCollection(output, generalAppCaseData, fromGaList,
                     civilCaseData, toCivilClaimantList);
         }
         //RespondentSol collection will hold ga doc accessible for RespondentSol1
-        String toCivilRespondentSol1List = docFieldName + civilDocRespondentSolSuffix;
+        String toCivilRespondentSol1List = civilDocPrefix + civilDocRespondentSolSuffix;
         if (canViewResp(civilCaseData, generalAppCaseData, "1")) {
             updateDocCollection(output, generalAppCaseData, fromGaList,
                     civilCaseData, toCivilRespondentSol1List);
         }
         //Respondent2Sol collection will hold ga doc accessible for RespondentSol2
-        String toCivilRespondentSol2List = docFieldName + civilDocRespondentSolTwoSuffix;
+        String toCivilRespondentSol2List = civilDocPrefix + civilDocRespondentSolTwoSuffix;
         if (canViewResp(civilCaseData, generalAppCaseData, "2")) {
             updateDocCollection(output, generalAppCaseData, fromGaList,
                     civilCaseData, toCivilRespondentSol2List);
@@ -148,25 +196,31 @@ public class UpdateFromGACaseEventTaskHandler implements BaseExternalTaskHandler
     @SuppressWarnings("unchecked")
     protected void updateDocCollection(Map<String, Object> output, CaseData generalAppCaseData, String fromGaList,
                         CaseData civilCaseData, String toCivilList) throws Exception {
-        Method gaGetter = ReflectionUtils.findMethod(CaseData.class, "get" + StringUtils.capitalize(fromGaList));
-        List<Element<CaseDocument>> gaDocs =
-                (List<Element<CaseDocument>>) (gaGetter != null ? gaGetter.invoke(generalAppCaseData) : null);
-        Method civilGetter = ReflectionUtils.findMethod(CaseData.class, "get" + StringUtils.capitalize(toCivilList));
-        List<Element<CaseDocument>> civilDocs =
-                (List<Element<CaseDocument>>) ofNullable(civilGetter != null ? civilGetter.invoke(civilCaseData) : null)
-                        .orElse(newArrayList());
-
-        if (gaDocs != null
-                && checkIfDocumentExists(civilDocs, gaDocs) < 1) {
+        Method gaGetter = ReflectionUtils.findMethod(CaseData.class,
+                                                     "get" + StringUtils.capitalize(fromGaList));
+        List<Element<?>> gaDocs =
+            (List<Element<?>>) (gaGetter != null ? gaGetter.invoke(generalAppCaseData) : null);
+        Method civilGetter = ReflectionUtils.findMethod(CaseData.class,
+                                                        "get" + StringUtils.capitalize(toCivilList));
+        List<Element<?>> civilDocs =
+            (List<Element<?>>) ofNullable(civilGetter != null ? civilGetter.invoke(civilCaseData) : null)
+                .orElse(newArrayList());
+        if (gaDocs != null && !(fromGaList.equals("gaDraftDocument"))) {
+            List<UUID> ids = civilDocs.stream().map(Element::getId).toList();
+            for (Element<?> gaDoc : gaDocs) {
+                if (!ids.contains(gaDoc.getId())) {
+                    civilDocs.add(gaDoc);
+                }
+            }
+        } else if (gaDocs != null && gaDocs.size() == 1 && checkIfDocumentExists(civilDocs, gaDocs) < 1) {
             civilDocs.addAll(gaDocs);
         }
-
         output.put(toCivilList, civilDocs.isEmpty() ? null : civilDocs);
     }
 
     protected boolean canViewClaimant(CaseData civilCaseData, CaseData generalAppCaseData) {
         List<Element<GeneralApplicationsDetails>> gaAppDetails = civilCaseData.getClaimantGaAppDetails();
-        if (Objects.isNull(gaAppDetails)) {
+        if (isNull(gaAppDetails)) {
             return false;
         }
         return gaAppDetails.stream()
@@ -181,7 +235,7 @@ public class UpdateFromGACaseEventTaskHandler implements BaseExternalTaskHandler
         } else {
             gaAppDetails = civilCaseData.getRespondentSolGaAppDetails();
         }
-        if (Objects.isNull(gaAppDetails)) {
+        if (isNull(gaAppDetails)) {
             return false;
         }
         return gaAppDetails.stream()
